# LongRoPE

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  evaluation.py  pyproject.toml  train.py
.github/workflows/: main.yml
notebooks/: 01_LongRoPE_training.ipynb
src/: LongRoPF.py  __init__.py  main.py
tests/: test_main.py  test_train.py
