[tool.poetry]
name = "src"
version = "0.1.0"
description = "An implementation of LongRoPE: Extending LLM Context Window Beyond 2 Million Tokens"
authors = ["Joshua David <jshuadvd@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
