[tool.poetry]
name = "src"
version = "0.1.0"
description = "An implementation of LongRoPE: Extending LLM Context Window Beyond 2 Million Tokens"
authors = ["Joshua David <jshuadvd@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
transformers = "^4.39.3"
accelerate = "^0.31.0"
datasets = "^2.20.0"
wandb = "^0.17.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
